--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.73</version>
+        </dependency>
         <!--        上传文件-->
         <dependency>
             <groupId>commons-fileupload</groupId>
