--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <!--        测试-->
         <dependency>
